ideal_spark_survey_paper.ipynb

--- a/PySpark/ideal_spark_survey_paper.ipynb
+++ b/PySpark/ideal_spark_survey_paper.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "# download household_sensors (hhs) zipped file containing ,csv.gz files\n",
-    "# very large file over 15GB zipped file initially downloaded and \n",
+    "# a very large file over 15GB zipped file initially downloaded and \n",
     "# extracted with 128GB RAM Ubuntu machine, sample extract used here.\n",
     "\n",
     "#hhs_url=\"https://datashare.ed.ac.uk/bitstream/handle/10283/3647/household_sensors.zip?sequence=25&isAllowed=y\"\n",
